# Bachelorarbeit

./: Cargo.toml  README.md
data/: cube.tri  cube.ver  cube_subd.tri  cube_subd.ver  double_torus_DV_mod.tri  double_torus_DV_mod.ver  double_torus_Peters.tri  double_torus_Peters.ver  hollow_cube_DV.tri  hollow_cube_DV.ver  icosahedron.tri  icosahedron.ver  teapot_surface0.norm  tetraeder.tri  tetraeder.ver  torus.tri  torus.ver
output/: orbifold.cof  orbifold.cof2  orbifold.hec  orbifold.tri_map  orbifold.ver_full  orbifold.ver_map
src/: lib.rs  main.rs  mesh.rs  rendererer.rs
src/mesh/: builder.rs  index.rs  list.rs  mesh.rs  mod.rs  reduction.rs
src/projective_structure/: minres.rs  mod.rs  structure.rs  visualisation.rs
src/visualisation/: bernstein.rs  casteljau.rs  genum.rs  hyperbolic_triangulation.rs  mod.rs  triangular_patch.rs
test_output/: orbifold.cp  orbifold.edg  orbifold.edg_map  orbifold.ind  orbifold.tri  orbifold.ver  orbifold.w
