[package]
name = "ba"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
log = { version = "0.4.22", features = ["kv", "std"] }
nalgebra = "0.33.2"
pretty_env_logger = "0.5.0"
thiserror = "2.0.3"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]

[toolchain]
channel = "nightly"
