[package]
name = "ba"
version = "0.1.0"
edition = "2024"

[dependencies]
apply = "0.3.0"
# bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy = { version = "0.15.1" }
bevy_egui = "0.32.0"
csv = "1.3.1"
egui_file = "0.20.0"
itertools = "0.14.0"
levenberg-marquardt = "0.14.0"
log = { version = "0.4.22", features = ["kv", "std"] }
nalgebra = "0.33.2"
num = "0.4.3"
pretty_env_logger = "0.5.0"
priority-queue = "2.1.1"
rand = "0.8.5"
thiserror = "2.0.3"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]

[toolchain]
channel = "nightly"
